synthizer-sys/synthizer-vendored/include/synthizer.h

/*
 * Note to maintainers: C API methods that obviously go with  a type live in the main .cpp file for that type, even if it is necessary to introduce a cpp file for that type to hold the C API (i.e. pure abstract classes).
 * 
 * Other methods are in src/c_api.cpp (i.e. generic property setters, initialization, etc.).
 * */

/*
 * A handle to any Synthizer object. Always nonzero.
 * */
typedef unsigned long long syz_Handle;
/*
 * An error. code. Specific error constants TBD. 0 means success.
 * */
typedef int syz_ErrorCode;
/*
 * Biquad properties are biquad filters from the audio eq cookbook.
 * 
 * Note to maintainers: the C API is in src/filter_properties.cpp (except for syz_setBiquad, in c_api.cpp with the other property setters).
 * */

/*
 * Configuration for a filter. Currently this struct should be treated as opaque. It's exposed here
 * in order to allow allocating them on the stack.  Changes to the layout and fields may occur without warning.
 * 
 * To initialize this struct, use one of the syz_BiquadDesignXXX functions, below.
 * */
struct syz_BiquadConfig {
	double _b0, _b1, _b2;
	double _a1, _a2;
	double _gain;
	unsigned char _is_wire;
};
/**
 * Stream infrastructure. See the manual for details on these functions.
 * 
 * Most objects provide a convenient shorthand helper for creating a stream handle and passing it into the object.
 * */
SYZ_CAPI syz_ErrorCode syz_createStreamHandleFromStreamParams(syz_Handle *out, const char *protocol, const char *path, void *param);
SYZ_CAPI syz_ErrorCode syz_createStreamHandleFromMemory(syz_Handle *out, unsigned long long data_len, const char *data);
SYZ_CAPI syz_ErrorCode syz_createStreamHandleFromFile(syz_Handle *out, const char *path);
/**
 * Custom streams.
 *
 * The callbacks here return a non-zero value to indicate an error, and may
 * assign a string to `err_msg` which must live until either:
 * - The end of the stream's lifetime; or
 * - The next time a callback associated with that stream is called.
 *
 * So, e.g., using a thread local to keep objects alive in bindings is fine.
 *
 * At the moment, these values are logged, but it is not possible to otherwise
 * recover them.
 * */

/**
 * Read from a stream. Must always write as many bytes as are requested.  Writing
 * less indicates the end of stream.
 * */
typedef int syz_StreamReadCallback(unsigned long long *read, unsigned long long requested, char *destination, void *userdata, const char ** err_msg);
/**
 * Stream seek callback. Should be self-explanatory.
 * */
typedef int syz_StreamSeekCallback(unsigned long long pos, void *userdata, const char **err_msg);
/**
 * Close the stream.
 *
 * The stream lifetime actually ends when the destroy callback is called.  The
 * lifetime of err_msg must be at least as long as the duration until that
 * point.  Put simply:
 * - If you're a C developer, you can either ignore the destroy callback and
 *   free your resources in close (in which case err_msg must effectively be a
 *   static string) or free your resources in destroy (in which case err_msg is a
 *   thing you can free).
 * - If you're developing bindings, you can use the destroy callback to keep
 *   exception objects and byte buffers around.
 * */
typedef int syz_StreamCloseCallback(void *userdata, const char **err_msg);
/**
 * The stream destroy callback is optional and is called when the steraam will
 * no longer be used.  Thhis primarily exists for bindinggs developers so that
 * they can keep error messages alive long enough and make sure the stream always dies.  Note that this is called if `syz_createStreamHandleFromCustomStream` fails as well, in the calling thread.
 * */
typedef void syz_StreamDestroyCallback(void *userdata);
/**
 * Represents a custom stream.  If the length of the stream is unknown, set it to -1.  Note that internally Synthizer
 * treats streams of unknown length as unseekable even if the seek callback is set.
 * */
struct syz_CustomStreamDef {
	syz_StreamReadCallback *read_cb;
	/**
	 * Optional. If unset, this stream doesn't support seeking.
	 * */
	syz_StreamSeekCallback *seek_cb;
	syz_StreamCloseCallback *close_cb;
	/* Optional. Set to NULL if not using. */
	syz_StreamDestroyCallback *destroy_cb;
	long long length;
	void *userdata;
};
/**
 * Get a stream handle from CustomStreamDef.
 *
 * If this function fails, the stream's close and destroy callbacks will be
 * called as if it had succeeded, in an arbitrary thread which may include the
 * caller.
 * */
SYZ_CAPI syz_ErrorCode syz_createStreamHandleFromCustomStream(syz_Handle *out, struct syz_CustomStreamDef *callbacks);
/**
 * Open a stream by filling out the callbacks struct.
 * 
 * Stream opening is done in the context of the calling thread, which means that the lifetime of err_msg only needs to be long enough that Synthizer can 
 * convert it to a SynthizerError.  Put another way, if calling `syz_streamHandleFromStreamParams`, this callback is called inline and the string will be cloned and communicated out through the usual Synthizer error
 * mechanism.
 * */
typedef int syz_StreamOpenCallback(struct syz_CustomStreamDef *callbacks, const char *protocol, const char *path, void *param, void *userdata, const char **err_msg);
/**
 * Register a protocol with the stream handler.
 * 
 * afterword, this can be used as `syz_streamHandleFromStreamParams(&handle, "myprotocol", "mypath", myparam)`.
 * 
 * It is not possible to unregister protocols.
 * */
SYZ_CAPI syz_ErrorCode syz_registerStreamProtocol(const char *protocol, syz_StreamOpenCallback *callback, void *userdata);
/*
 * Create a generator that represents reading from a stream.
 * users who wish to read from files should call syz_createStreamingGeneratorFromFile, which is more future-proof than this API and should not break between major releases.
 * 
 * @param protocol: The protocol. You probably want file.
 * @param path: The path.
 * @param param: an opaque void parameter for the underlying implementation; NULL for built-in protocols.
 * 
 * This will be documented better when there's a manual and more than one type of protocol.
 * 
 * This is a shortcut for creating the stream yourself and adding it to a DecodingGenerator; advanced use cases can use the alternate path for other optimizations in future.
 * 
 * Note to maintainers: lives in src/generators/decoding.cpp, because it's a shortcut for that.
 * */
SYZ_CAPI syz_ErrorCode syz_createStreamingGeneratorFromStreamParams(syz_Handle *out, syz_Handle context, const char *protocol, const char *path, void *param);
/*
 * Same as calling syz_createStreamingGeneratorFromStreamParams with the file protocol. Exists to future-proof the API.
 */
SYZ_CAPI syz_ErrorCode syz_createStreamingGeneratorFromFile(syz_Handle *out, syz_Handle context, const char *path);
/**
 * Create a StreamingGenerator from a stream handle.
 * */
SYZ_CAPI syz_ErrorCode syz_createStreamingGeneratorFromStreamHandle(syz_Handle *out, syz_Handle context, syz_Handle stream);
/*
 * A Buffer is decoded audio data.
 * 
 * This creates one from the 3 streaming parameters.
 * */
SYZ_CAPI syz_ErrorCode syz_createBufferFromStreamParams(syz_Handle *out, const char *protocol, const char *path, void *param);
/**
 * Create a buffer from encoded audio data that's already
 * in memory.
 * */
SYZ_CAPI syz_ErrorCode syz_createBufferFromEncodedData(syz_Handle *out, unsigned long long data_len, const char *data);
/**
 * Create a buffer from a float array in memory.
 * */
SYZ_CAPI syz_ErrorCode syz_createBufferFromFloatArray(syz_Handle *out, unsigned int sr, unsigned int channels, unsigned long long frames, const float *data);
/**
 * Create a buffer from a file. Currently equivalent to:
 * syz_createBufferFromStreamParams(&out, "file", "the_path", NULL);
 *
 * Exists to future-proof the API.
 * */
SYZ_CAPI syz_ErrorCode syz_createBufferFromFile(syz_Handle *out, const char *path);
/**
 * create a buffer from a stream handle.
 * */
SYZ_CAPI syz_ErrorCode syz_createBufferFromStreamHandle(syz_Handle *out, syz_Handle stream);
SYZ_CAPI syz_ErrorCode syz_bufferGetChannels(unsigned int *out, syz_Handle buffer);
SYZ_CAPI syz_ErrorCode syz_bufferGetLengthInSamples(unsigned int *out, syz_Handle buffer);
SYZ_CAPI syz_ErrorCode syz_bufferGetLengthInSeconds(double *out, syz_Handle buffer);
/*
 * A buffer generator generates audio from a buffer.
 * */
SYZ_CAPI syz_ErrorCode syz_createBufferGenerator(syz_Handle *out, syz_Handle context);
/*
 * Add/remove generators from a Source. The Source weak references the generators; they must be kept alive on the external side for the time being.
 * 
 * This will probably change as lifetimes get narrowed down, and as sources are extended with more functionality to manage their generators.
 * 
 * Each generator may only be added to a source once. Duplicate calls are ignored.
 * If a generator isn't on a source, the call silently does nothing.
 * */
SYZ_CAPI syz_ErrorCode syz_sourceAddGenerator(syz_Handle source, syz_Handle generator);
SYZ_CAPI syz_ErrorCode syz_sourceRemoveGenerator(syz_Handle source, syz_Handle generator);
/*
 * Create a DirectSource, which routes audio directly to speakers.
 * This is for music, for example.
 * */
SYZ_CAPI syz_ErrorCode syz_createDirectSource(syz_Handle *out, syz_Handle context);
/*
 * Create a panned source, a source with azimuth/elevation as the underlying panning strategy.
 * 
 * For spatialized audio like games, use Source3D, which has x/y/z and other interesting spatialization properties.
 * */
SYZ_CAPI syz_ErrorCode syz_createPannedSource(syz_Handle *out, syz_Handle context);
/*
 * A Source3D has x/y/z, and distance model properties.
 * */
SYZ_CAPI syz_ErrorCode syz_createSource3D(syz_Handle *out, syz_Handle context);
SYZ_CAPI syz_ErrorCode syz_createNoiseGenerator(syz_Handle *out, syz_Handle context, unsigned int channels);
/* Initialize with syz_initRouteConfig before using. */
struct syz_RouteConfig {
	float gain;
	float fade_time;
	struct syz_BiquadConfig filter;
};
/*
 * Initialize a syz_routeConfig with default values.
 * 
 * Should be called before using syz_RouteConfig for the first time.  Afterwords, it's fine to just reuse the already-initialized
 * config and change values in it, but some values in the struct need to be nonzero unless explicitly set to 0 by the user.
 * Though the struct is currently simple, it will shortly contain filters which must be properly initialized if audio is to play at all.
 * 
 * The defaults configure a gain of 1 and a fade_time of 0.03 seconds.
 * */
SYZ_CAPI syz_ErrorCode syz_initRouteConfig(struct syz_RouteConfig *cfg);
SYZ_CAPI syz_ErrorCode syz_routingConfigRoute(syz_Handle context, syz_Handle output, syz_Handle input, struct syz_RouteConfig *config);
SYZ_CAPI syz_ErrorCode syz_routingRemoveRoute(syz_Handle context, syz_Handle output, syz_Handle input, float fade_out);
SYZ_CAPI syz_ErrorCode syz_effectReset(syz_Handle effect);
SYZ_CAPI syz_ErrorCode syz_createGlobalEcho(syz_Handle *out, syz_Handle context);
struct syz_EchoTapConfig {
	float delay;
	float gain_l;
	float gain_r;
};
SYZ_CAPI syz_ErrorCode syz_globalEchoSetTaps(syz_Handle handle, unsigned int n_taps, const struct syz_EchoTapConfig *taps);
SYZ_CAPI syz_ErrorCode syz_createGlobalFdnReverb(syz_Handle *out, syz_Handle context);