synthizer-sys/src/bindgen/synthizer.rs

extern "C" {
    pub fn syz_createStreamHandleFromStreamParams(
        out: *mut syz_Handle,
        protocol: *const ::std::os::raw::c_char,
        path: *const ::std::os::raw::c_char,
        param: *mut ::std::os::raw::c_void,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createStreamHandleFromMemory(
        out: *mut syz_Handle,
        data_len: ::std::os::raw::c_ulonglong,
        data: *const ::std::os::raw::c_char,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createStreamHandleFromFile(
        out: *mut syz_Handle,
        path: *const ::std::os::raw::c_char,
    ) -> syz_ErrorCode;
}
pub type syz_StreamReadCallback = ::std::option::Option<
    unsafe extern "C" fn(
        read: *mut ::std::os::raw::c_ulonglong,
        requested: ::std::os::raw::c_ulonglong,
        destination: *mut ::std::os::raw::c_char,
        userdata: *mut ::std::os::raw::c_void,
        err_msg: *mut *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int,
>;
pub type syz_StreamSeekCallback = ::std::option::Option<
    unsafe extern "C" fn(
        pos: ::std::os::raw::c_ulonglong,
        userdata: *mut ::std::os::raw::c_void,
        err_msg: *mut *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int,
>;
pub type syz_StreamCloseCallback = ::std::option::Option<
    unsafe extern "C" fn(
        userdata: *mut ::std::os::raw::c_void,
        err_msg: *mut *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int,
>;
pub type syz_StreamDestroyCallback =
    ::std::option::Option<unsafe extern "C" fn(userdata: *mut ::std::os::raw::c_void)>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct syz_CustomStreamDef {
    pub read_cb: syz_StreamReadCallback,
    pub seek_cb: syz_StreamSeekCallback,
    pub close_cb: syz_StreamCloseCallback,
    pub destroy_cb: syz_StreamDestroyCallback,
    pub length: ::std::os::raw::c_longlong,
    pub userdata: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_syz_CustomStreamDef() {
    assert_eq!(
        ::std::mem::size_of::<syz_CustomStreamDef>(),
        48usize,
        concat!("Size of: ", stringify!(syz_CustomStreamDef))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_CustomStreamDef>(),
        8usize,
        concat!("Alignment of ", stringify!(syz_CustomStreamDef))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_CustomStreamDef>())).read_cb as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_CustomStreamDef),
            "::",
            stringify!(read_cb)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_CustomStreamDef>())).seek_cb as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_CustomStreamDef),
            "::",
            stringify!(seek_cb)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_CustomStreamDef>())).close_cb as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_CustomStreamDef),
            "::",
            stringify!(close_cb)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_CustomStreamDef>())).destroy_cb as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_CustomStreamDef),
            "::",
            stringify!(destroy_cb)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_CustomStreamDef>())).length as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_CustomStreamDef),
            "::",
            stringify!(length)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_CustomStreamDef>())).userdata as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_CustomStreamDef),
            "::",
            stringify!(userdata)
        )
    );
}
extern "C" {
    pub fn syz_createStreamHandleFromCustomStream(
        out: *mut syz_Handle,
        callbacks: *mut syz_CustomStreamDef,
    ) -> syz_ErrorCode;
}
pub type syz_StreamOpenCallback = ::std::option::Option<
    unsafe extern "C" fn(
        callbacks: *mut syz_CustomStreamDef,
        protocol: *const ::std::os::raw::c_char,
        path: *const ::std::os::raw::c_char,
        param: *mut ::std::os::raw::c_void,
        userdata: *mut ::std::os::raw::c_void,
        err_msg: *mut *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int,
>;
extern "C" {
    pub fn syz_registerStreamProtocol(
        protocol: *const ::std::os::raw::c_char,
        callback: syz_StreamOpenCallback,
        userdata: *mut ::std::os::raw::c_void,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createStreamingGeneratorFromStreamParams(
        out: *mut syz_Handle,
        context: syz_Handle,
        protocol: *const ::std::os::raw::c_char,
        path: *const ::std::os::raw::c_char,
        param: *mut ::std::os::raw::c_void,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createStreamingGeneratorFromFile(
        out: *mut syz_Handle,
        context: syz_Handle,
        path: *const ::std::os::raw::c_char,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createStreamingGeneratorFromStreamHandle(
        out: *mut syz_Handle,
        context: syz_Handle,
        stream: syz_Handle,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createBufferFromStreamParams(
        out: *mut syz_Handle,
        protocol: *const ::std::os::raw::c_char,
        path: *const ::std::os::raw::c_char,
        param: *mut ::std::os::raw::c_void,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createBufferFromEncodedData(
        out: *mut syz_Handle,
        data_len: ::std::os::raw::c_ulonglong,
        data: *const ::std::os::raw::c_char,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createBufferFromFloatArray(
        out: *mut syz_Handle,
        sr: ::std::os::raw::c_uint,
        channels: ::std::os::raw::c_uint,
        frames: ::std::os::raw::c_ulonglong,
        data: *const f32,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createBufferFromFile(
        out: *mut syz_Handle,
        path: *const ::std::os::raw::c_char,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createBufferFromStreamHandle(
        out: *mut syz_Handle,
        stream: syz_Handle,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_bufferGetChannels(
        out: *mut ::std::os::raw::c_uint,
        buffer: syz_Handle,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_bufferGetLengthInSamples(
        out: *mut ::std::os::raw::c_uint,
        buffer: syz_Handle,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_bufferGetLengthInSeconds(out: *mut f64, buffer: syz_Handle) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createBufferGenerator(out: *mut syz_Handle, context: syz_Handle) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_sourceAddGenerator(source: syz_Handle, generator: syz_Handle) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_sourceRemoveGenerator(source: syz_Handle, generator: syz_Handle) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createDirectSource(out: *mut syz_Handle, context: syz_Handle) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createPannedSource(out: *mut syz_Handle, context: syz_Handle) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createSource3D(out: *mut syz_Handle, context: syz_Handle) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createNoiseGenerator(
        out: *mut syz_Handle,
        context: syz_Handle,
        channels: ::std::os::raw::c_uint,
    ) -> syz_ErrorCode;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct syz_RouteConfig {
    pub gain: f32,
    pub fade_time: f32,
    pub filter: syz_BiquadConfig,
}
#[test]
fn bindgen_test_layout_syz_RouteConfig() {
    assert_eq!(
        ::std::mem::size_of::<syz_RouteConfig>(),
        64usize,
        concat!("Size of: ", stringify!(syz_RouteConfig))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_RouteConfig>(),
        8usize,
        concat!("Alignment of ", stringify!(syz_RouteConfig))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_RouteConfig>())).gain as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_RouteConfig),
            "::",
            stringify!(gain)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_RouteConfig>())).fade_time as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_RouteConfig),
            "::",
            stringify!(fade_time)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_RouteConfig>())).filter as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_RouteConfig),
            "::",
            stringify!(filter)
        )
    );
}
extern "C" {
    pub fn syz_initRouteConfig(cfg: *mut syz_RouteConfig) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_routingConfigRoute(
        context: syz_Handle,
        output: syz_Handle,
        input: syz_Handle,
        config: *mut syz_RouteConfig,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_routingRemoveRoute(
        context: syz_Handle,
        output: syz_Handle,
        input: syz_Handle,
        fade_out: f32,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_effectReset(effect: syz_Handle) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createGlobalEcho(out: *mut syz_Handle, context: syz_Handle) -> syz_ErrorCode;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct syz_EchoTapConfig {
    pub delay: f32,
    pub gain_l: f32,
    pub gain_r: f32,
}
#[test]
fn bindgen_test_layout_syz_EchoTapConfig() {
    assert_eq!(
        ::std::mem::size_of::<syz_EchoTapConfig>(),
        12usize,
        concat!("Size of: ", stringify!(syz_EchoTapConfig))
    );
    assert_eq!(
        ::std::mem::align_of::<syz_EchoTapConfig>(),
        4usize,
        concat!("Alignment of ", stringify!(syz_EchoTapConfig))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_EchoTapConfig>())).delay as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_EchoTapConfig),
            "::",
            stringify!(delay)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_EchoTapConfig>())).gain_l as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_EchoTapConfig),
            "::",
            stringify!(gain_l)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<syz_EchoTapConfig>())).gain_r as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(syz_EchoTapConfig),
            "::",
            stringify!(gain_r)
        )
    );
}
extern "C" {
    pub fn syz_globalEchoSetTaps(
        handle: syz_Handle,
        n_taps: ::std::os::raw::c_uint,
        taps: *mut syz_EchoTapConfig,
    ) -> syz_ErrorCode;
}
extern "C" {
    pub fn syz_createGlobalFdnReverb(out: *mut syz_Handle, context: syz_Handle) -> syz_ErrorCode;
}
